<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2013 David Laurell

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <string name="app_name">LogcatViewer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loglevel">Loglevel</string>
    <string name="loglevel_verbose">Verbose</string>
    <string name="loglevel_debug">Debug</string>
    <string name="loglevel_info">Info</string>
    <string name="loglevel_warn">Warn</string>
    <string name="loglevel_error">Error</string>
    <string name="loglevel_assert">Assert</string>
    <string name="share_log_items">Share log items</string>

</resources>
