<!--
    Copyright 2013 David Laurell

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_loglevel"
        android:showAsAction="always"
        android:title="@string/loglevel">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_loglevel_verbose"
                    android:title="@string/loglevel_verbose"
                    android:checked="true" />
                <item
                    android:id="@+id/action_loglevel_debug"
                    android:title="@string/loglevel_debug" />
                <item
                    android:id="@+id/action_loglevel_info"
                    android:title="@string/loglevel_info" />
                <item
                    android:id="@+id/action_loglevel_warn"
                    android:title="@string/loglevel_warn" />
                <item
                    android:id="@+id/action_loglevel_error"
                    android:title="@string/loglevel_error" />
                <item
                    android:id="@+id/action_loglevel_assert"
                    android:title="@string/loglevel_assert" />
            </group>
        </menu>
    </item>
</menu>
